<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginBottom="6dp"
    android:elevation="24dp"
    android:background="@color/list_background">


    <ImageView
        android:id="@+id/lifeBar"
        android:layout_width="20dp"
        android:layout_height="0dp"
        android:background="@android:color/holo_green_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/life_bar" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="17dp"
        android:contentDescription="@string/character_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:color/holo_blue_dark" />

    <ImageView
        android:id="@+id/delete"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="6dp"
        android:contentDescription="@string/delete_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_delete"
        tools:srcCompat="@android:drawable/ic_menu_delete" />

    <TextView
        android:id="@+id/name"
        android:layout_width="200dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="50dp"
        android:background="@color/list_background"
        android:textColor="@color/list_text"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="24sp"
        app:autoSizeMinTextSize="8sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/species"
        android:layout_width="175dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:background="@color/list_background"
        android:textColor="@color/list_text2"
        android:textSize="24sp"
        app:autoSizeMaxTextSize="24sp"
        app:autoSizeMinTextSize="8sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>